samples/_failures_safe/1761431877_ba5994_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b99d696f.c: In function ‘main’:
./samples/SAFE/__tmp_b99d696f.c:177:24: error: missing terminating " character
  177 |                 printf("Invalid choice. Please enter a
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b99d696f.c:177:17: error: expected expression at end of input
  177 |                 printf("Invalid choice. Please enter a
      |                 ^~~~~~
./samples/SAFE/__tmp_b99d696f.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b99d696f.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b99d696f.c:177:17: error: expected declaration or statement at end of input
